<resources>
    <string name="app_name_txt">My App Portfolio</string>
    <string name="action_quit_txt">Quit</string>
    <string name="portfolio_label">"My Nanodegree Apps!"</string>
    <string name="capstone_app_btn">"CAPSTONE: MY OWN APP"</string>
    <string name="xyz_reader_btn">"XYZ READER"</string>
    <string name="build_it_bigger_btn">"BUILD IT BIGGER"</string>
    <string name="library_app_btn">"LIBRARY APP"</string>
    <string name="scores_app_btn">"SCORES APP"</string>
    <string name="spotify_streamer_btn">"SPOTIFY STREAMER"</string>
</resources>