<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/portfolio_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/portfolioLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_btn"
        android:id="@+id/spotifyBtn"
        android:layout_below="@+id/portfolioLabel"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_btn"
        android:id="@+id/scoresAppBtn"
        android:layout_below="@+id/spotifyBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app_btn"
        android:id="@+id/libraryAppBtn"
        android:layout_below="@+id/scoresAppBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_btn"
        android:id="@+id/buildItBiggerBtn"
        android:layout_below="@+id/libraryAppBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_btn"
        android:id="@+id/xyzReaderBtn"
        android:layout_below="@+id/buildItBiggerBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app_btn"
        android:id="@+id/capstoneBtn"
        android:layout_below="@+id/xyzReaderBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FF0033" />

</RelativeLayout>